--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "license": "MIT",
   "dependencies": {
     "@playwright/test": "^1.44.0",
+    "cheerio": "^1.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
-    "node-fetch": "^2.6.7"
+    "jsdom": "^26.1.0",
+    "node-fetch": "^2.7.0"
   }
 }
